revise image size when rendering

--- a/trees.html
+++ b/trees.html
@@ -10,6 +10,9 @@
     label {
         color: brown;
     }
+    img {
+        width: 80%;
+    }
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
