--- a/trees.html
+++ b/trees.html
@@ -18,7 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 <script language="javascript" >
     const MODEL_NAME = 'js/model.json';
-    const LABELS_NAME = 'treeset_labels.txt';
+    const LABELS_NAME = 'YOUR_LABELS';
     const IMAGE_SIZE = 448;
     let model;
     let labels;
