add the title and revise to show image of width 100%

--- a/treestfjs.html
+++ b/treestfjs.html
@@ -1,3 +1,4 @@
+<title>Trees TF.js</title>
 <div id="select">Image: <input type="file" id="select_img" accept="image/*, capture=camera" onchange="preview()"></div>
 <div>Prediction: <label id="pred"></label>/ Confidence: <label id="conf"></label></div>
 <br>
@@ -11,7 +12,7 @@
         color: brown;
     }
     img {
-        width: 80%;
+        width: 100%;
     }
 </style>
 
