finetune font-szie to 5vw

--- a/treestfjs.html
+++ b/treestfjs.html
@@ -6,7 +6,7 @@
 
 <style type="text/css">
     div, input {
-        font-size: 1.5cm;
+        font-size: 5vw;
     }
     #select, #result {
         white-space: nowrap;
@@ -16,7 +16,7 @@
     }
     img {
         width: 100vmin;
-        height: auto;
+        height: 100vmin;
     }
 </style>
 
