remove default border while no img

--- a/treestfjs.html
+++ b/treestfjs.html
@@ -18,6 +18,9 @@
         width: 100vmin;
         height: 100vmin;
     }
+    img[src=""], img:not([src]){
+        opacity:0;
+    }
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
